project_2/project_2.sdk/.metadata/.plugins/org.eclipse.cdt.ui/sysmon_bsp_xiicps_polled_master_example_1.build.log
10:44:22 **** Auto Build of configuration Debug for project sysmon_bsp_xiicps_polled_master_example_1 ****
make all 
'Building file: ../src/xiicps_polled_master_example.c'
'Invoking: ARM v8 gcc compiler'
aarch64-none-elf-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xiicps_polled_master_example.o" -I../../sysmon_bsp/psu_cortexa53_0/include -MMD -MP -MF"src/xiicps_polled_master_example.d" -MT"src/xiicps_polled_master_example.o" -o "src/xiicps_polled_master_example.o" "../src/xiicps_polled_master_example.c"
../src/xiicps_polled_master_example.c: In function 'IicPsMasterWriteReg':
../src/xiicps_polled_master_example.c:209:32: error: 'configReg' undeclared (first use in this function); did you mean 'configData'?
  xil_printf("configReg= %x\n",*configReg);
                                ^~~~~~~~~
                                configData
../src/xiicps_polled_master_example.c:209:32: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/subdir.mk:23: src/xiicps_polled_master_example.o] Error 1

10:44:23 Build Finished (took 262ms)

